<?xml version="1.0"?>
<package>0.
  <name>interactive_marker_tutorials_local</name>
  <version>0.0.1</version>
  <description>The interactive_marker_tutorials package</description>

  <maintainer email="ratneshmadaan@gmail.com"></maintainer>

  <license>BSD</license>
  <url type="website"></url>

  <author >David Gossow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>